# lamuta

./: .gitmodules  Cargo.toml  LICENSE  README.md  SPEC.md  example.lm  example.zk
.lade/: build.sh
docs/: index.html
docs/lib/: std.lm
example/: ascii.lm  cat.lm  compose.lm  fizzbuzz.lm  hello.lm  library.lm  lisp.lm  nand.lm  object.lm  prime.lm  quine.lm  selfhost.lm  table.lm
example/akeome/: config.lm
example/akeome/src/: main.lm
example/algorithm/: fizzbuzz.lm  nlp.lm  sort.lm
example/arts/: train.lm
example/fizzbuzz/: config.lm
example/fizzbuzz/lib/: std.lm
example/fizzbuzz/src/: main.lm
example/langs/: lamlam.lm  lisp.lm  rumya.lm  selfhost.lm
example/langs/lamuc/: main.lm
example/langs/lamutac/: README.md  READNE.md  compiler.lm  hoge.lm  main.lm  makefile  test.lm
example/langs/rumya/: README.md  rumya.lm  test.rm
example/langs/rumya/example/: fizzbuzz.rm  hello.lm  whilelet.rm
example/lisp/: config.lm
example/lisp/lib/: std.lm
example/lisp/src/: main.lm
example/src/: main.lm
example/tools/: csv.lm  table.lm
src/: main.rs  utils.rs
