[package]
name = "lamuta"
version = "0.4.0"
edition = "2021"
authors = ["梶塚太智 <kajizukataichi@outlook.jp>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.12.10", features = ["blocking"] }
rustyline = "15.0.0"
thiserror = "2.0.9"
url = "2.5.4"
